style: fix tutorial heading text overflow

--- a/src/stylesheets/reset.css
+++ b/src/stylesheets/reset.css
@@ -109,7 +109,7 @@ select {
 .shepherd-title {
   font-size: 1rem !important;
   font-weight: 600 !important;
-  padding-inline: 0.25rem !important;
+  justify-content: center !important;
   font-family: var(--font-roboto) !important;
   color: hsl(var(--foreground)) !important;
 }
@@ -139,6 +139,6 @@ select {
 
 @media (width <= 625px) {
   body > .shepherd-element {
-    max-width: 90% !important;
+    max-width: 93% !important;
   }
 }
